@@ -1,6 +1,9 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - reading of tiff images more error robust (fixes Debian bug #784795)
+
+
 Version 3.4.2, Apr 23, 2015
 ----------------------------
 
